# VoteSecure-rust-patched

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  deny.toml
.github/workflows/: build-release.yml  run-makefile-for-cpv-docker-image.yml  run-makefile-for-isabelle-docker-image.yml  run-makefile-for-ple-docker-image.yml  run-precommit-hooks.yml  test-validity-of-assurance-case-skeleton.yml  test-validity-of-changed-clafer-files.yml  test-validity-of-changed-lando-files.yml  test-validity-of-clafer-files.yml  test-validity-of-cryptol-files.yml  test-validity-of-feature-model.yml  test-validity-of-isabelle-files.yml  verify-rust-workspace.yml  (+7 more)
assurance/: Makefile
cryptography/: Cargo.toml  DEVELOPER.md  README.md  clippy.toml
cryptography/benches/: large_vector.rs  shuffle.rs
cryptography/fuzz/: Cargo.toml
cryptography/fuzz/fuzz_targets/: deser_eg_ciphertext_ristretto.rs  encode_bytes_ristretto.rs  encode_bytes_ristretto_2.rs  encode_bytes_ristretto_3.rs  encode_scalar_bytes_ristretto.rs
cryptography/macros/vser_derive/: Cargo.toml
cryptography/macros/vser_derive/src/: lib.rs
cryptography/src/: context.rs  lib.rs
cryptography/src/cryptosystem/: elgamal.rs  mod.rs  naoryung.rs
cryptography/src/dkgd/: dealer.rs  mod.rs  recipient.rs  tests.rs
cryptography/src/groups/: mod.rs
cryptography/src/groups/p256/: element.rs  group.rs  mod.rs  scalar.rs  tests.rs
cryptography/src/groups/productgroup/: element.rs  mod.rs  scalar.rs  tests.rs
cryptography/src/groups/ristretto255/: element.rs  group.rs  mod.rs  scalar.rs  tests.rs
cryptography/src/traits/: groups.rs  mod.rs
cryptography/src/utils/: error.rs  hash.rs  mod.rs  rng.rs  signatures.rs
cryptography/src/utils/serialization/: fixed.rs  mod.rs  serde.rs  tests.rs  variable.rs
cryptography/src/zkp/: dlogeq.rs  mod.rs  pleq.rs  schnorr.rs  shuffle.rs
docker/: Makefile  README.md
docs/: ci_cd_cv.md  cryptol-specs.md
protocol/: Cargo.toml  DEVELOPER.md  README.md
protocol/src/: auth_service.rs  bulletins.rs  cryptography.rs  elections.rs  lib.rs  messages.rs
protocol/src/participants/: integration_tests.rs  integration_tests_basic.rs  mod.rs
protocol/src/participants/ballot_check_application/: mod.rs  top_level_actor.rs
protocol/src/participants/ballot_check_application/sub_actors/: ballot_check.rs  mod.rs
protocol/src/participants/digital_ballot_box/: bulletin_board.rs  mod.rs  storage.rs  top_level_actor.rs
protocol/src/participants/digital_ballot_box/sub_actors/: casting.rs  checking.rs  mod.rs  submission.rs
protocol/src/participants/election_admin_server/: mod.rs  top_level_actor.rs
protocol/src/participants/election_admin_server/sub_actors/: mod.rs  voter_authentication.rs
protocol/src/participants/voting_application/: mod.rs  top_level_actor.rs
protocol/src/participants/voting_application/sub_actors/: authentication.rs  casting.rs  checking.rs  mod.rs  submission.rs
protocol/src/trustee_protocols/: integration_tests.rs  integration_tests_basic.rs  mod.rs  trustee_cryptography.rs  trustee_messages.rs
protocol/src/trustee_protocols/trustee_administration_server/: mod.rs  top_level_actor.rs
protocol/src/trustee_protocols/trustee_administration_server/handlers/: awaiting_decrypted_ballots.rs  awaiting_egcryptograms.rs  awaiting_election_pk.rs  awaiting_partial_decryptions.rs  awaiting_setup.rs  awaiting_shares.rs  failed.rs  idle.rs  mod.rs
protocol/src/trustee_protocols/trustee_application/: mod.rs  top_level_actor.rs
protocol/src/trustee_protocols/trustee_application/ascent_logic/: decrypt.rs  dkg.rs  messages.rs  mix.rs  mod.rs  protocol.rs  utils.rs
protocol/src/trustee_protocols/trustee_application/handlers/: decryption.rs  election_setup.rs  failed.rs  idle.rs  key_gen.rs  mixing.rs  mod.rs
supply-chain/: config.toml
(+141 files in other folders)
